# PRScal

./: CMakeLists.txt  install.sh
src/: Analysis.cpp  Analysis.h  DosageFile.cpp  DosageFile.h  Main.cpp  UserVariables.h  WeightFile.cpp  WeightFile.h
